# Profile

Profile/: CMakeLists.txt  merge_access.cu  merge_exe
elementwise/: elementwise.dot  elementwise_add  elementwise_add.cu
reduce/: CMakeLists.txt  main.cu  profile.csv  reduce_v.cu  reduce_v0.cu  utils.h
sgemv/: Sgemv_v0  Sgemv_v0.cu  Sgemv_v1  Sgemv_v1.cu  Sgemv_v2  Sgemv_v2.cu  ref
